[package]
name = "rust_web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.0", features = ["json"]}
serde = "1.0.136"
chrono = "0.4"
bincode = "1.3.3"
tfhe = { version = "0.5.3", features = [ "boolean", "shortint", "integer", "x86_64-unix" ] }
serde_json = "1.0.48"